--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   uuid: ^4.0.0
   flutter_tts: ^4.2.3
   drop_down_list: ^2.1.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
@@ -66,10 +67,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/Images/logo.png
-    - asset/Images/user.png
+    - assets/Images/logoBee.png
+    - assets/Images/user.png
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+  # An image assets can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
@@ -78,18 +79,18 @@ flutter:
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
+  # list giving the assets and other descriptors for the font. For
   # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - assets: fonts/Schyler-Regular.ttf
+  #       - assets: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - assets: fonts/TrajanPro.ttf
+  #       - assets: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
