--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_tts: ^4.2.3
   audioplayers: ^6.0.0
   socket_io_client: ^3.1.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
